// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MFACodePane calls \`swap\` onChange 1`] = `
[
  "updateEntity",
  "lock",
  1,
  [Function],
  "newUser",
]
`;

exports[`MFACodePane renders correctly 1`] = `
<DocumentFragment>
  <div
    data-__type="mfa_code_input"
    data-invalidhint="mfaCodeErrorHint,6"
    data-isvalid="false"
    data-lockid="1"
    data-placeholder="placeholder"
    data-value="mfa"
  />
</DocumentFragment>
`;

exports[`MFACodePane sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<DocumentFragment>
  <div
    data-__type="mfa_code_input"
    data-invalidhint="mfaCodeErrorHint,6"
    data-isvalid="true"
    data-lockid="1"
    data-placeholder="placeholder"
    data-value="mfa"
  />
</DocumentFragment>
`;
